refactor: Use valueOf() instead of constructor for wrapper classes