@@ -76,13 +76,13 @@ public class MorphUtils {
      * values.<br>
      * <ul>
      * <li>Boolean - Boolean.FALSE</li>
-     * <li>Character - new Character('\0')</li>
-     * <li>Byte - new Byte((byte) 0)</li>
-     * <li>Short - new Short((short) 0)</li>
-     * <li>Integer - new Integer(0)</li>
-     * <li>Long - new Long(0)</li>
-     * <li>Float - new Float(0)</li>
-     * <li>Double - new Double(0)</li>
+     * <li>Character - Character.valueOf('\0')</li>
+     * <li>Byte - Byte.valueOf((byte) 0)</li>
+     * <li>Short - Short.valueOf((short) 0)</li>
+     * <li>Integer - Integer.valueOf(0)</li>
+     * <li>Long - Long.valueOf(0)</li>
+     * <li>Float - Float.valueOf(0)</li>
+     * <li>Double - Double.valueOf(0)</li>
      * <li>String - null</li>
      * <li>BigInteger - BigInteger.ZERO</li>
      * <li>BigDecimal - MorphUtils.BIGDECIMAL_ZERO</li>
@@ -119,13 +119,13 @@ public class MorphUtils {
      * Registers morphers for wrappers and String with standard default values.<br>
      * <ul>
      * <li>Boolean - Boolean.FALSE</li>
-     * <li>Character - new Character('\0')</li>
-     * <li>Byte - new Byte((byte) 0)</li>
-     * <li>Short - new Short((short) 0)</li>
-     * <li>Integer - new Integer(0)</li>
-     * <li>Long - new Long(0)</li>
-     * <li>Float - new Float(0)</li>
-     * <li>Double - new Double(0)</li>
+     * <li>Character - Character.valueOf('\0')</li>
+     * <li>Byte - Byte.valueOf((byte) 0)</li>
+     * <li>Short - Short.valueOf((short) 0)</li>
+     * <li>Integer - Integer.valueOf(0)</li>
+     * <li>Long - Long.valueOf(0)</li>
+     * <li>Float - Float.valueOf(0)</li>
+     * <li>Double - Double.valueOf(0)</li>
      * <li>String - null</li>
      * <li>BigInteger - BigInteger.ZERO</li>
      * <li>BigDecimal - MorphUtils.BIGDECIMAL_ZERO</li>
