@@ -61,15 +61,15 @@ public class BigDecimalMorpherTest extends AbstractObjectMorpherTestCase {
     }
 
     public void testBigDecimalMorph_Number() {
-        Object actual = ((BigDecimalMorpher) getMorpherWithDefaultValue()).morph(new Float(1f));
+        Object actual = ((BigDecimalMorpher) getMorpherWithDefaultValue()).morph(Float.valueOf(1f));
         assertEquals(MorphUtils.BIGDECIMAL_ONE, actual);
-        actual = ((BigDecimalMorpher) getMorpherWithDefaultValue()).morph(new Double(1d));
+        actual = ((BigDecimalMorpher) getMorpherWithDefaultValue()).morph(Double.valueOf(1d));
         assertEquals(MorphUtils.BIGDECIMAL_ONE, actual);
     }
 
     public void testBigDecimalMorph_Number__Double_INFINITY() {
         try {
-            ((BigDecimalMorpher) getMorpher()).morph(new Double(Double.POSITIVE_INFINITY));
+            ((BigDecimalMorpher) getMorpher()).morph(Double.valueOf(Double.POSITIVE_INFINITY));
             fail("Should have thrown an Exception");
         } catch (MorphException expected) {
             // ok
@@ -78,7 +78,7 @@ public class BigDecimalMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testBigDecimalMorph_Number__Double_NAN() {
         try {
-            ((BigDecimalMorpher) getMorpher()).morph(new Double(Double.NaN));
+            ((BigDecimalMorpher) getMorpher()).morph(Double.valueOf(Double.NaN));
             fail("Should have thrown an Exception");
         } catch (MorphException expected) {
             // ok
@@ -87,7 +87,7 @@ public class BigDecimalMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testBigDecimalMorph_Number__Float_INFINITY() {
         try {
-            ((BigDecimalMorpher) getMorpher()).morph(new Float(Float.POSITIVE_INFINITY));
+            ((BigDecimalMorpher) getMorpher()).morph(Float.valueOf(Float.POSITIVE_INFINITY));
             fail("Should have thrown an Exception");
         } catch (MorphException expected) {
             // ok
@@ -96,7 +96,7 @@ public class BigDecimalMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testBigDecimalMorph_Number__Float_NAN() {
         try {
-            ((BigDecimalMorpher) getMorpher()).morph(new Float(Float.NaN));
+            ((BigDecimalMorpher) getMorpher()).morph(Float.valueOf(Float.NaN));
             fail("Should have thrown an Exception");
         } catch (MorphException expected) {
             // ok
