@@ -106,14 +106,14 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testByteConversion_byte() {
         morpher = new NumberMorpher(Byte.TYPE);
-        Byte expected = new Byte(Byte.MIN_VALUE);
+        Byte expected = Byte.valueOf(Byte.MIN_VALUE);
         Byte actual = (Byte) morpher.morph(expected);
         assertEquals(expected, actual);
     }
 
     public void testByteConversion_Byte() {
         morpher = new NumberMorpher(Byte.class);
-        Byte expected = new Byte(Byte.MIN_VALUE);
+        Byte expected = Byte.valueOf(Byte.MIN_VALUE);
         Byte actual = (Byte) morpher.morph(expected);
         assertEquals(expected, actual);
     }
@@ -131,7 +131,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
     }
 
     public void testByteConversion_useDefault() {
-        Byte expected = new Byte(Byte.MIN_VALUE);
+        Byte expected = Byte.valueOf(Byte.MIN_VALUE);
         morpher = new NumberMorpher(Byte.class, expected);
         Byte actual = (Byte) morpher.morph(new Object());
         assertEquals(expected, actual);
@@ -144,14 +144,14 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testDoubleConversion_double() {
         morpher = new NumberMorpher(Double.TYPE);
-        Double expected = new Double(Double.MIN_VALUE);
+        Double expected = Double.valueOf(Double.MIN_VALUE);
         Double actual = (Double) morpher.morph(expected);
         assertEquals(expected, actual);
     }
 
     public void testDoubleConversion_Double() {
         morpher = new NumberMorpher(Double.class);
-        Double expected = new Double(Double.MIN_VALUE);
+        Double expected = Double.valueOf(Double.MIN_VALUE);
         Double actual = (Double) morpher.morph(expected);
         assertEquals(expected, actual);
     }
@@ -170,7 +170,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testDoubleConversion_useDefault() {
         morpher = new NumberMorpher(Double.class);
-        Double expected = new Double(Double.MIN_VALUE);
+        Double expected = Double.valueOf(Double.MIN_VALUE);
         morpher.setDefaultValue(expected);
         morpher.setUseDefault(true);
         Double actual = (Double) morpher.morph(new Object());
@@ -184,14 +184,14 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testFloatConversion_float() {
         morpher = new NumberMorpher(Float.TYPE);
-        Float expected = new Float(Float.MIN_VALUE);
+        Float expected = Float.valueOf(Float.MIN_VALUE);
         Float actual = (Float) morpher.morph(expected);
         assertEquals(expected, actual);
     }
 
     public void testFloatConversion_Float() {
         morpher = new NumberMorpher(Float.class);
-        Float expected = new Float(Float.MIN_VALUE);
+        Float expected = Float.valueOf(Float.MIN_VALUE);
         Float actual = (Float) morpher.morph(expected);
         assertEquals(expected, actual);
     }
@@ -210,7 +210,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testFloatConversion_useDefault() {
         morpher = new NumberMorpher(Float.class);
-        Float expected = new Float(Float.MIN_VALUE);
+        Float expected = Float.valueOf(Float.MIN_VALUE);
         morpher.setDefaultValue(expected);
         morpher.setUseDefault(true);
         Float actual = (Float) morpher.morph(new Object());
@@ -224,14 +224,14 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testIntegerConversion_int() {
         morpher = new NumberMorpher(Integer.TYPE);
-        Integer expected = new Integer(Integer.MIN_VALUE);
+        Integer expected = Integer.valueOf(Integer.MIN_VALUE);
         Integer actual = (Integer) morpher.morph(expected);
         assertEquals(expected, actual);
     }
 
     public void testIntegerConversion_Integer() {
         morpher = new NumberMorpher(Integer.class);
-        Integer expected = new Integer(Integer.MIN_VALUE);
+        Integer expected = Integer.valueOf(Integer.MIN_VALUE);
         Integer actual = (Integer) morpher.morph(expected);
         assertEquals(expected, actual);
     }
@@ -250,7 +250,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testIntegerConversion_useDefault() {
         morpher = new NumberMorpher(Integer.class);
-        Integer expected = new Integer(Integer.MIN_VALUE);
+        Integer expected = Integer.valueOf(Integer.MIN_VALUE);
         morpher.setDefaultValue(expected);
         morpher.setUseDefault(true);
         Integer actual = (Integer) morpher.morph(new Object());
@@ -264,14 +264,14 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testlongConversion_long() {
         morpher = new NumberMorpher(Long.TYPE);
-        Long expected = new Long(Long.MIN_VALUE);
+        Long expected = Long.valueOf(Long.MIN_VALUE);
         Long actual = (Long) morpher.morph(expected);
         assertEquals(expected, actual);
     }
 
     public void testLongConversion_Long() {
         morpher = new NumberMorpher(Long.class);
-        Long expected = new Long(Long.MIN_VALUE);
+        Long expected = Long.valueOf(Long.MIN_VALUE);
         Long actual = (Long) morpher.morph(expected);
         assertEquals(expected, actual);
     }
@@ -290,7 +290,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testLongConversion_useDefault() {
         morpher = new NumberMorpher(Long.class);
-        Long expected = new Long(Long.MIN_VALUE);
+        Long expected = Long.valueOf(Long.MIN_VALUE);
         morpher.setDefaultValue(expected);
         morpher.setUseDefault(true);
         Long actual = (Long) morpher.morph(new Object());
@@ -304,7 +304,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testNumbermorpher_incompatible_defaultValue() {
         try {
-            morpher = new NumberMorpher(Integer.class, new Double(0));
+            morpher = new NumberMorpher(Integer.class, Double.valueOf(0));
             fail("Should have thrown a ConversionException");
         } catch (MorphException expected) {
             // ok
@@ -322,7 +322,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testNumbermorpher_notSupported_2() {
         try {
-            morpher = new NumberMorpher(String.class, new Integer(0));
+            morpher = new NumberMorpher(String.class, Integer.valueOf(0));
             fail("Should have thrown a ConversionException");
         } catch (MorphException expected) {
             // ok
@@ -340,7 +340,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testNumbermorpher_unspecifiedClass2() {
         try {
-            morpher = new NumberMorpher(null, new Integer(0));
+            morpher = new NumberMorpher(null, Integer.valueOf(0));
             fail("Should have thrown a ConversionException");
         } catch (MorphException expected) {
             // ok
@@ -354,14 +354,14 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testShortConversion_short() {
         morpher = new NumberMorpher(Short.TYPE);
-        Short expected = new Short(Short.MIN_VALUE);
+        Short expected = Short.valueOf(Short.MIN_VALUE);
         Short actual = (Short) morpher.morph(expected);
         assertEquals(expected, actual);
     }
 
     public void testShortConversion_Short() {
         morpher = new NumberMorpher(Short.class);
-        Short expected = new Short(Short.MIN_VALUE);
+        Short expected = Short.valueOf(Short.MIN_VALUE);
         Short actual = (Short) morpher.morph(expected);
         assertEquals(expected, actual);
     }
@@ -375,7 +375,7 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testShortConversion_useDefault() {
         morpher = new NumberMorpher(Short.class);
-        Short expected = new Short(Short.MIN_VALUE);
+        Short expected = Short.valueOf(Short.MIN_VALUE);
         morpher.setDefaultValue(expected);
         morpher.setUseDefault(true);
         Short actual = (Short) morpher.morph(new Object());
@@ -405,8 +405,8 @@ public class NumberMorpherTest extends AbstractObjectMorpherTestCase {
 
     protected void setUp() throws Exception {
         morpher = new NumberMorpher(Integer.class);
-        morpherWithDefaultValue = new NumberMorpher(Integer.class, new Integer(0));
+        morpherWithDefaultValue = new NumberMorpher(Integer.class, Integer.valueOf(0));
         anotherMorpher = new NumberMorpher(Integer.class);
-        anotherMorpherWithDefaultValue = new NumberMorpher(Integer.class, new Integer(1));
+        anotherMorpherWithDefaultValue = new NumberMorpher(Integer.class, Integer.valueOf(1));
     }
 }
