@@ -63,9 +63,9 @@ public class ObjectListMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testMorph_IntegerList() {
         List expected = new ArrayList();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
-        expected.add(new Integer(3));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
+        expected.add(Integer.valueOf(3));
         List actual = (List) morpher.morph(expected);
         ArrayAssertions.assertEquals(expected, actual);
     }
@@ -85,9 +85,9 @@ public class ObjectListMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testMorph_NullList_withDefaultValue() {
         List expected = new ArrayList();
-        expected.add(new Integer(0));
-        expected.add(new Integer(0));
-        expected.add(new Integer(0));
+        expected.add(Integer.valueOf(0));
+        expected.add(Integer.valueOf(0));
+        expected.add(Integer.valueOf(0));
         List input = new ArrayList();
         input.add(null);
         input.add(null);
@@ -98,9 +98,9 @@ public class ObjectListMorpherTest extends AbstractObjectMorpherTestCase {
 
     public void testMorph_StringList() {
         List expected = new ArrayList();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
-        expected.add(new Integer(3));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
+        expected.add(Integer.valueOf(3));
         List input = new ArrayList();
         input.add("1");
         input.add("2");
@@ -168,9 +168,9 @@ public class ObjectListMorpherTest extends AbstractObjectMorpherTestCase {
     protected void setUp() throws Exception {
         morpher = new ObjectListMorpher(new NumberMorpher(Integer.class));
         morpherWithDefaultValue = new ObjectListMorpher(new NumberMorpher(Integer.class,
-            new Integer(0)), new Integer(0));
+            Integer.valueOf(0)), Integer.valueOf(0));
         anotherMorpher = new ObjectListMorpher(new NumberMorpher(Integer.class));
         anotherMorpherWithDefaultValue = new ObjectListMorpher(new NumberMorpher(Integer.class,
-            new Integer(1)), new Integer(1));
+            Integer.valueOf(1)), Integer.valueOf(1));
     }
 }
