@@ -78,7 +78,7 @@ public class DoubleMorpherTest extends AbstractMorpherTestCase {
     }
 
     public void testDoubleMorphDecimalValue_Number() {
-        Double expected = new Double(3.1416d);
+        Double expected = Double.valueOf(3.1416d);
         double actual = ((DoubleMorpher) getMorpher()).morph(expected);
         assertEquals(3.1416d, actual, 0d);
     }
@@ -90,25 +90,25 @@ public class DoubleMorpherTest extends AbstractMorpherTestCase {
     }
 
     public void testDoubleMorphMaxValue_Number() {
-        Double expected = new Double(Double.MAX_VALUE);
+        Double expected = Double.valueOf(Double.MAX_VALUE);
         double actual = ((DoubleMorpher) getMorpher()).morph(expected);
         assertEquals(expected.doubleValue(), actual, 0d);
     }
 
     public void testDoubleMorphMaxValue_String() {
-        String expected = String.valueOf(new Double(Double.MAX_VALUE));
+        String expected = String.valueOf(Double.valueOf(Double.MAX_VALUE));
         double actual = ((DoubleMorpher) getMorpher()).morph(expected);
         assertEquals(expected, String.valueOf(actual));
     }
 
     public void testDoubleMorphMinValue_Number() {
-        Double expected = new Double(Double.MIN_VALUE);
+        Double expected = Double.valueOf(Double.MIN_VALUE);
         double actual = ((DoubleMorpher) getMorpher()).morph(expected);
         assertEquals(expected.doubleValue(), actual, 0d);
     }
 
     public void testDoubleMorphMinValue_String() {
-        String expected = String.valueOf(new Double(Double.MIN_VALUE));
+        String expected = String.valueOf(Double.valueOf(Double.MIN_VALUE));
         double actual = ((DoubleMorpher) getMorpher()).morph(expected);
         assertEquals(expected, String.valueOf(actual));
     }
