@@ -78,13 +78,13 @@ public class IntMorpherTest extends AbstractMorpherTestCase {
     }
 
     public void testIntMorphDecimalValue_Number() {
-        Double expected = new Double(3.1416d);
+        Double expected = Double.valueOf(3.1416d);
         int actual = ((IntMorpher) getMorpher()).morph(expected);
         assertEquals(3, actual);
     }
 
     public void testIntMorphDecimalValue_Number_outOfRange() {
-        int actual = ((IntMorpher) getMorpher()).morph(new Double(Double.MAX_VALUE));
+        int actual = ((IntMorpher) getMorpher()).morph(Double.valueOf(Double.MAX_VALUE));
         assertEquals(Integer.MAX_VALUE, actual);
     }
 
@@ -95,25 +95,25 @@ public class IntMorpherTest extends AbstractMorpherTestCase {
     }
 
     public void testIntMorphMaxValue_Number() {
-        Integer expected = new Integer(Integer.MAX_VALUE);
+        Integer expected = Integer.valueOf(Integer.MAX_VALUE);
         int actual = ((IntMorpher) getMorpher()).morph(expected);
         assertEquals(expected.intValue(), actual);
     }
 
     public void testIntMorphMaxValue_String() {
-        String expected = String.valueOf(new Integer(Integer.MAX_VALUE));
+        String expected = String.valueOf(Integer.valueOf(Integer.MAX_VALUE));
         int actual = ((IntMorpher) getMorpher()).morph(expected);
         assertEquals(expected, String.valueOf(actual));
     }
 
     public void testIntMorphMinValue_Number() {
-        Integer expected = new Integer(Integer.MIN_VALUE);
+        Integer expected = Integer.valueOf(Integer.MIN_VALUE);
         int actual = ((IntMorpher) getMorpher()).morph(expected);
         assertEquals(expected.intValue(), actual);
     }
 
     public void testIntMorphMinValue_String() {
-        String expected = String.valueOf(new Integer(Integer.MIN_VALUE));
+        String expected = String.valueOf(Integer.valueOf(Integer.MIN_VALUE));
         int actual = ((IntMorpher) getMorpher()).morph(expected);
         assertEquals(expected, String.valueOf(actual));
     }
