@@ -78,13 +78,13 @@ public class LongMorpherTest extends AbstractMorpherTestCase {
     }
 
     public void testLongMorphDecimalValue_Number() {
-        Double expected = new Double(3.1416d);
+        Double expected = Double.valueOf(3.1416d);
         long actual = ((LongMorpher) getMorpher()).morph(expected);
         assertEquals(3, actual);
     }
 
     public void testLongMorphDecimalValue_Number_outOfRange() {
-        long actual = ((LongMorpher) getMorpher()).morph(new Double(Double.MAX_VALUE));
+        long actual = ((LongMorpher) getMorpher()).morph(Double.valueOf(Double.MAX_VALUE));
         assertEquals(Long.MAX_VALUE, actual);
     }
 
@@ -95,25 +95,25 @@ public class LongMorpherTest extends AbstractMorpherTestCase {
     }
 
     public void testLongMorphMaxValue_Number() {
-        Long expected = new Long(Long.MAX_VALUE);
+        Long expected = Long.valueOf(Long.MAX_VALUE);
         long actual = ((LongMorpher) getMorpher()).morph(expected);
         assertEquals(expected.longValue(), actual);
     }
 
     public void testLongMorphMaxValue_String() {
-        String expected = String.valueOf(new Long(Long.MAX_VALUE));
+        String expected = String.valueOf(Long.valueOf(Long.MAX_VALUE));
         long actual = ((LongMorpher) getMorpher()).morph(expected);
         assertEquals(expected, String.valueOf(actual));
     }
 
     public void testLongMorphMinValue_Number() {
-        Long expected = new Long(Long.MIN_VALUE);
+        Long expected = Long.valueOf(Long.MIN_VALUE);
         long actual = ((LongMorpher) getMorpher()).morph(expected);
         assertEquals(expected.longValue(), actual);
     }
 
     public void testLongMorphMinValue_String() {
-        String expected = String.valueOf(new Long(Long.MIN_VALUE));
+        String expected = String.valueOf(Long.valueOf(Long.MIN_VALUE));
         long actual = ((LongMorpher) getMorpher()).morph(expected);
         assertEquals(expected, String.valueOf(actual));
     }
