@@ -78,13 +78,13 @@ public class ShortMorpherTest extends AbstractMorpherTestCase {
     }
 
     public void testShortMorphDecimalValue_Number() {
-        Double expected = new Double(3.1416d);
+        Double expected = Double.valueOf(3.1416d);
         short actual = ((ShortMorpher) getMorpher()).morph(expected);
         assertEquals(3, actual);
     }
 
     public void testShortMorphDecimalValue_Number_outOfRange() {
-        short actual = ((ShortMorpher) getMorpher()).morph(new Double(Double.MAX_VALUE));
+        short actual = ((ShortMorpher) getMorpher()).morph(Double.valueOf(Double.MAX_VALUE));
         assertEquals(-1, actual);
     }
 
@@ -95,25 +95,25 @@ public class ShortMorpherTest extends AbstractMorpherTestCase {
     }
 
     public void testShortMorphMaxValue_Number() {
-        Short expected = new Short(Short.MAX_VALUE);
+        Short expected = Short.valueOf(Short.MAX_VALUE);
         short actual = ((ShortMorpher) getMorpher()).morph(expected);
         assertEquals(expected.shortValue(), actual);
     }
 
     public void testShortMorphMaxValue_String() {
-        String expected = String.valueOf(new Short(Short.MAX_VALUE));
+        String expected = String.valueOf(Short.valueOf(Short.MAX_VALUE));
         short actual = ((ShortMorpher) getMorpher()).morph(expected);
         assertEquals(expected, String.valueOf(actual));
     }
 
     public void testShortMorphMinValue_Number() {
-        Short expected = new Short(Short.MIN_VALUE);
+        Short expected = Short.valueOf(Short.MIN_VALUE);
         short actual = ((ShortMorpher) getMorpher()).morph(expected);
         assertEquals(expected.shortValue(), actual);
     }
 
     public void testShortMorphMinValue_String() {
-        String expected = String.valueOf(new Short(Short.MIN_VALUE));
+        String expected = String.valueOf(Short.valueOf(Short.MIN_VALUE));
         short actual = ((ShortMorpher) getMorpher()).morph(expected);
         assertEquals(expected, String.valueOf(actual));
     }
