@@ -85,7 +85,7 @@ public class IntArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_int_Integer() {
         int[] expecteds = new int[]{1, 2};
-        Integer[] actuals = new Integer[]{new Integer(1), new Integer(2)};
+        Integer[] actuals = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
@@ -102,7 +102,7 @@ public class IntArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_int_Integer_different_length() {
         int[] expecteds = new int[]{1};
-        Integer[] actuals = new Integer[]{new Integer(1), new Integer(2)};
+        Integer[] actuals = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
         boolean errorThrown = false;
         try {
             ArrayAssertions.assertEquals(expecteds, actuals);
@@ -114,7 +114,7 @@ public class IntArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_int_Integer_expecteds_is_null() {
         boolean errorThrown = false;
-        Integer[] actuals = new Integer[]{new Integer(1), new Integer(2)};
+        Integer[] actuals = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
         try {
             ArrayAssertions.assertEquals((int[]) null, actuals);
         } catch (AssertionFailedError expected) {
@@ -124,14 +124,14 @@ public class IntArrayAssertionsTest extends TestCase {
     }
 
     public void testAssertEquals_Integer_int() {
-        Integer[] expecteds = new Integer[]{new Integer(1), new Integer(2)};
+        Integer[] expecteds = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
         int[] actuals = new int[]{1, 2};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_Integer_int_actuals_is_null() {
         boolean errorThrown = false;
-        Integer[] expecteds = new Integer[]{new Integer(1), new Integer(2)};
+        Integer[] expecteds = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
         try {
             ArrayAssertions.assertEquals(expecteds, (int[]) null);
         } catch (AssertionFailedError expected) {
@@ -141,7 +141,7 @@ public class IntArrayAssertionsTest extends TestCase {
     }
 
     public void testAssertEquals_Integer_int_different_length() {
-        Integer[] expecteds = new Integer[]{new Integer(1)};
+        Integer[] expecteds = new Integer[]{Integer.valueOf(1)};
         int[] actuals = new int[]{1, 2};
         boolean errorThrown = false;
         try {
@@ -164,8 +164,8 @@ public class IntArrayAssertionsTest extends TestCase {
     }
 
     public void testAssertEquals_Integer_Integer() {
-        Integer[] expecteds = new Integer[]{new Integer(1), new Integer(2)};
-        Integer[] actuals = new Integer[]{new Integer(1), new Integer(2)};
+        Integer[] expecteds = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
+        Integer[] actuals = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
@@ -177,23 +177,23 @@ public class IntArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_multi_int_Integer() {
         int[][] expecteds = new int[][]{{1, 2}, {1, 2}};
-        Integer[][] actuals = new Integer[][]{{new Integer(1), new Integer(2)},
-            {new Integer(1), new Integer(2)}};
+        Integer[][] actuals = new Integer[][]{{Integer.valueOf(1), Integer.valueOf(2)},
+            {Integer.valueOf(1), Integer.valueOf(2)}};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_multi_Integer_int() {
-        Integer[][] expecteds = new Integer[][]{{new Integer(1), new Integer(2)},
-            {new Integer(1), new Integer(2)}};
+        Integer[][] expecteds = new Integer[][]{{Integer.valueOf(1), Integer.valueOf(2)},
+            {Integer.valueOf(1), Integer.valueOf(2)}};
         int[][] actuals = new int[][]{{1, 2}, {1, 2}};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_multi_Integer_Integer() {
-        Integer[][] expecteds = new Integer[][]{{new Integer(1), new Integer(2)},
-            {new Integer(1), new Integer(2)}};
-        Integer[][] actuals = new Integer[][]{{new Integer(1), new Integer(2)},
-            {new Integer(1), new Integer(2)}};
+        Integer[][] expecteds = new Integer[][]{{Integer.valueOf(1), Integer.valueOf(2)},
+            {Integer.valueOf(1), Integer.valueOf(2)}};
+        Integer[][] actuals = new Integer[][]{{Integer.valueOf(1), Integer.valueOf(2)},
+            {Integer.valueOf(1), Integer.valueOf(2)}};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
@@ -217,31 +217,31 @@ public class IntArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_OO_int_Integer() {
         Object expecteds = new int[]{1, 2};
-        Object actuals = new Integer[]{new Integer(1), new Integer(2)};
+        Object actuals = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_OO_int_Object_array() {
         Object expecteds = new int[]{1, 2};
-        Object actuals = new Object[]{new Integer(1), new Integer(2)};
+        Object actuals = new Object[]{Integer.valueOf(1), Integer.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_OO_Integer_int() {
-        Object expecteds = new Integer[]{new Integer(1), new Integer(2)};
+        Object expecteds = new Integer[]{Integer.valueOf(1), Integer.valueOf(2)};
         Object actuals = new int[]{1, 2};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_OO_Object_array_int() {
-        Object expecteds = new Object[]{new Integer(1), new Integer(2)};
+        Object expecteds = new Object[]{Integer.valueOf(1), Integer.valueOf(2)};
         Object actuals = new int[]{1, 2};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_OO_Object_array_Object_array() {
-        Object expecteds = new Object[]{new Integer(1), new Integer(2)};
-        Object actuals = new Object[]{new Integer(1), new Integer(2)};
+        Object expecteds = new Object[]{Integer.valueOf(1), Integer.valueOf(2)};
+        Object actuals = new Object[]{Integer.valueOf(1), Integer.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 }
