@@ -51,19 +51,19 @@ public class LongArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_long_Long() {
         long[] expecteds = new long[]{1, 2};
-        Long[] actuals = new Long[]{new Long(1), new Long(2)};
+        Long[] actuals = new Long[]{Long.valueOf(1), Long.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_Long_long() {
-        Long[] expecteds = new Long[]{new Long(1), new Long(2)};
+        Long[] expecteds = new Long[]{Long.valueOf(1), Long.valueOf(2)};
         long[] actuals = new long[]{1, 2};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_Long_Long() {
-        Long[] expecteds = new Long[]{new Long(1), new Long(2)};
-        Long[] actuals = new Long[]{new Long(1), new Long(2)};
+        Long[] expecteds = new Long[]{Long.valueOf(1), Long.valueOf(2)};
+        Long[] actuals = new Long[]{Long.valueOf(1), Long.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
@@ -91,7 +91,7 @@ public class LongArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_Long_long_actuals_is_null() {
         boolean errorThrown = false;
-        Long[] expecteds = new Long[]{new Long(1), new Long(2)};
+        Long[] expecteds = new Long[]{Long.valueOf(1), Long.valueOf(2)};
         try {
             ArrayAssertions.assertEquals(expecteds, (long[]) null);
         } catch (AssertionFailedError expected) {
@@ -114,7 +114,7 @@ public class LongArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_long_Long_different_length() {
         long[] expecteds = new long[]{1};
-        Long[] actuals = new Long[]{new Long(1), new Long(2)};
+        Long[] actuals = new Long[]{Long.valueOf(1), Long.valueOf(2)};
         boolean errorThrown = false;
         try {
             ArrayAssertions.assertEquals(expecteds, actuals);
@@ -125,7 +125,7 @@ public class LongArrayAssertionsTest extends TestCase {
     }
 
     public void testAssertEquals_Long_long_different_length() {
-        Long[] expecteds = new Long[]{new Long(1)};
+        Long[] expecteds = new Long[]{Long.valueOf(1)};
         long[] actuals = new long[]{1, 2};
         boolean errorThrown = false;
         try {
@@ -149,7 +149,7 @@ public class LongArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_long_Long_expecteds_is_null() {
         boolean errorThrown = false;
-        Long[] actuals = new Long[]{new Long(1), new Long(2)};
+        Long[] actuals = new Long[]{Long.valueOf(1), Long.valueOf(2)};
         try {
             ArrayAssertions.assertEquals((long[]) null, actuals);
         } catch (AssertionFailedError expected) {
@@ -177,23 +177,23 @@ public class LongArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_multi_long_Long() {
         long[][] expecteds = new long[][]{{1, 2}, {1, 2}};
-        Long[][] actuals = new Long[][]{{new Long(1), new Long(2)},
-            {new Long(1), new Long(2)}};
+        Long[][] actuals = new Long[][]{{Long.valueOf(1), Long.valueOf(2)},
+            {Long.valueOf(1), Long.valueOf(2)}};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_multi_Long_long() {
-        Long[][] expecteds = new Long[][]{{new Long(1), new Long(2)},
-            {new Long(1), new Long(2)}};
+        Long[][] expecteds = new Long[][]{{Long.valueOf(1), Long.valueOf(2)},
+            {Long.valueOf(1), Long.valueOf(2)}};
         long[][] actuals = new long[][]{{1, 2}, {1, 2}};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_multi_Long_Long() {
-        Long[][] expecteds = new Long[][]{{new Long(1), new Long(2)},
-            {new Long(1), new Long(2)}};
-        Long[][] actuals = new Long[][]{{new Long(1), new Long(2)},
-            {new Long(1), new Long(2)}};
+        Long[][] expecteds = new Long[][]{{Long.valueOf(1), Long.valueOf(2)},
+            {Long.valueOf(1), Long.valueOf(2)}};
+        Long[][] actuals = new Long[][]{{Long.valueOf(1), Long.valueOf(2)},
+            {Long.valueOf(1), Long.valueOf(2)}};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
@@ -217,31 +217,31 @@ public class LongArrayAssertionsTest extends TestCase {
 
     public void testAssertEquals_OO_long_Long() {
         Object expecteds = new long[]{1, 2};
-        Object actuals = new Long[]{new Long(1), new Long(2)};
+        Object actuals = new Long[]{Long.valueOf(1), Long.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_OO_Long_long() {
-        Object expecteds = new Long[]{new Long(1), new Long(2)};
+        Object expecteds = new Long[]{Long.valueOf(1), Long.valueOf(2)};
         Object actuals = new long[]{1, 2};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_OO_long_Object_array() {
         Object expecteds = new long[]{1, 2};
-        Object actuals = new Object[]{new Long(1), new Long(2)};
+        Object actuals = new Object[]{Long.valueOf(1), Long.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_OO_Object_array_long() {
-        Object expecteds = new Object[]{new Long(1), new Long(2)};
+        Object expecteds = new Object[]{Long.valueOf(1), Long.valueOf(2)};
         Object actuals = new long[]{1, 2};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 
     public void testAssertEquals_OO_Object_array_Object_array() {
-        Object expecteds = new Object[]{new Long(1), new Long(2)};
-        Object actuals = new Object[]{new Long(1), new Long(2)};
+        Object expecteds = new Object[]{Long.valueOf(1), Long.valueOf(2)};
+        Object actuals = new Object[]{Long.valueOf(1), Long.valueOf(2)};
         ArrayAssertions.assertEquals(expecteds, actuals);
     }
 }
